--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~9.1.0-next.1",
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "angular-material-fileupload": "^2.0.0",
     "component": "^1.1.0",
     "d3": "^5.15.0",
     "d3-graphviz": "^2.6.1",
