--- a/P4Analyst/AngularApp/ClientApp/package.json
+++ b/P4Analyst/AngularApp/ClientApp/package.json
@@ -24,11 +24,12 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/d3": "^5.7.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
     "d3": "^5.15.0",
-    "d3-graphviz": "^3.0.4",
+    "d3-graphviz": "^2.6.1",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.1",
