--- a/P4Analyst/AngularApp/ClientApp/package.json
+++ b/P4Analyst/AngularApp/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@types/d3": "^5.7.2",
+    "angular-resize-event": "^1.2.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
