--- a/P4Analyst/AngularApp/ClientApp/package.json
+++ b/P4Analyst/AngularApp/ClientApp/package.json
@@ -33,8 +33,10 @@
     "d3-graphviz": "^2.6.1",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "ngx-store": "^2.1.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
+    "queue-typescript": "^1.0.1",
     "rxjs": "^6.5.3",
     "zone.js": "0.9.1"
   },
