--- a/P4Analyst/AngularApp/appsettings.Development.json
+++ b/P4Analyst/AngularApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "(localdb)\\mssqllocaldb;Database=P4File;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
