--- a/P4Analyst/AngularApp/appsettings.json
+++ b/P4Analyst/AngularApp/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "(localdb)\\mssqllocaldb;Database=P4File;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
