Fájl kezelő oldal kész

--- a/P4Analyst/AngularApp/appsettings.Development.json
+++ b/P4Analyst/AngularApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "(localdb)\\mssqllocaldb;Database=P4File;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=P4File;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
