--- a/P4Analyst/AngularApp/ClientApp/package.json
+++ b/P4Analyst/AngularApp/ClientApp/package.json
@@ -32,7 +32,8 @@
     "d3": "^5.15.0",
     "d3-graphviz": "^2.6.1",
     "hammerjs": "^2.0.8",
-    "jquery": "3.4.1",
+    "jquery": "^3.5.0",
+    "ngx-clipboard": "^12.3.1",
     "ngx-store": "^2.1.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
