Elemzés nagyjából kész
Egy grafikont már megjelenítek, annak előállításán még finomítani kell, gráfok színezése sem teljeskörű, elő kell állítani azt a gráfot, ami mutatja, hogy merre milyen sűrűn járok

--- a/P4Analyst/AngularApp/appsettings.Development.json
+++ b/P4Analyst/AngularApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=P4File;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=P4Data;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
