--- a/P4Analyst/AngularApp/ClientApp/package.json
+++ b/P4Analyst/AngularApp/ClientApp/package.json
@@ -28,11 +28,13 @@
     "angular-resize-event": "^1.2.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "core-js": "^3.3.3",
     "d3": "^5.15.0",
     "d3-graphviz": "^2.6.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
+    "ng2-charts": "^2.3.2",
     "ngx-clipboard": "^12.3.1",
     "ngx-store": "^2.1.0",
     "oidc-client": "^1.9.1",
